fix getFirst()